@@ -1115,6 +1115,14 @@ Here is an overview of the plugins dstat ships with:</p></div>
 </p>
 </dd>
 <dt class="hdlist1">
+--md-status
+</dt>
+<dd>
+<p>
+    show software raid (md) progress and speed
+</p>
+</dd>
+<dt class="hdlist1">
 --memcache-hits
 </dt>
 <dd>
@@ -1570,7 +1578,7 @@ improvements or bugreports, please send them to:
 <h3 id="_performance_tools">Performance tools</h3><div style="clear:left"></div>
 <div class="literalblock">
 <div class="content">
-<pre><tt>ifstat(1), iftop(8), iostat(1), mpstat(1), netstat(1), nfsstat(1), nstat, vmstat(1), xosview(1)</tt></pre>
+<pre><tt>ifstat(1), iftop(8), iostat(1), mpstat(1), netstat(1), nfsstat(1), nstat, powertop(1), vmstat(1), xosview(1)</tt></pre>
 </div></div>
 <h3 id="_debugging_tools">Debugging tools</h3><div style="clear:left"></div>
 <div class="literalblock">
@@ -1630,7 +1638,7 @@ improvements or bugreports, please send them to:
 <div id="footer">
 <div id="footer-text">
 Version 0.7.0<br />
-Last updated 2010-06-11 08:20:28 CEST
+Last updated 2010-07-01 14:34:59 CEST
 </div>
 </div>
 </body>
